2006-01-07  Michael J M Thomson  <mjmt@internode.on.net>

	* gtk/gtkmm.h: Include menutoolbutton.h and tearoffmenuitem.h

2005-12-24  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* docs/tutorial/gtkmm-tut.xml: quick fix for source code location of
	cairo simple line drawing example

2006-01-04  Cedric Gustin <cedric.gustin@gmail.com>

	* gtk/src/Makefile_list_of_hg.am_fragment: Moved plug.hg and
	socket.hg from files_posix_hg to files_general_hg as both GtkPlug
	and GtkSocket are now supported on win32.
2005-12-20  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/container.ccg:
	* gtk/src/container.hg: Use custom_c_callback option 
	with _WRAP_SIGNAL for the remove signal, so we can 
	provide a custom signal callback (as well as the existing 
	custom default signal callback). This allows us to 
	check for already-deleted children in connected signal handler 
	callbacks as well as the default signal handler. This should 
	be a partial fix for bug #315874 from Philip Langdale.

2005-12-23  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/gtkmm-tut.xml: DrawingArea chpater: Move GDK 
	stuff into an appendix, and remove reference to X, because it is 
	not always running on X. 

2005-12-23  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/figures/Makefile.am: Mention the new screenshots 
	so they are disted and uploaded.
	* docs/tutorial/gtkmm-tut.xml: Fix a source code path.

2005-12-21  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* configure.in: added makefiles for new example directories
	* docs/tutorial/Makefile.am:
	* docs/tutorial/figures/drawingarea_lines.png:
	* docs/tutorial/gtkmm-tut.xml:
	* examples/book/Makefile.am:
	* examples/book/drawingarea/main.cc:
	* examples/book/drawingarea/myarea.cc:
	* examples/book/drawingarea/myarea.h: complete rework of the drawing area
	chapter of the gtkmm tutorial to use Cairomm for drawing instead of old
	Gdk functions.  Updated text and examples, and added several new examles.
