@@ -202,26 +202,21 @@ The configure script will warn you if you have not installed any of the other pa
 <sect2>
 <title>Prebuilt Packages</title>
 
-<sect3>
-<title>Debian GNU/Linux</title>
-<para>On Debian GNU/Linux, gtkmm 2.4 is available in unstable/sid. You can install gtkmm by typing this on the command-line:
-<programlisting>
-apt-get install libgtkmm2.4-dev
-</programlisting>
-
-If you use stable/woody however, you'll have to compile gtkmm yourself.
+<para>
+    Recent versions of gtkmm are packaged by nearly every major Linux
+    distribution these days.  If you use Linux, chances are that you can get
+    started with gtkmm by installing the package from the official repository
+    for your distribution.  Distributions that include gtkmm in their
+    repositories include Debian, Ubuntu, Red Hat Fedora, Mandriva, Suse, and
+    many others.
 </para>
-</sect3>
-
-<sect3>
-<title>Red Hat Linux</title>
-<para>RedHat do not yet provide RPMs of gtkmm. We hope they will do this soon.</para>
-</sect3>
-
-<sect3>
-<title>Mandrake Linux</title>
-<para>TODO. gtkmm is in the betas.</para>
-</sect3>
+<para>
+    The names of the gtkmm packages vary from distribution to distribution
+    (e.g. <application>libgtkmm2.4-dev</application> on Debian and Ubuntu or
+    <application>gtkmm24-devel</application> on Red Hat Fedora), so check with
+    your distribution's package management program for the correct package name
+    and install it like you would any other package.
+</para>
 </sect2>
 </sect1>
 
