@@ -1,3 +1,8 @@
+2005-12-31	Jonathon Jongsma	<jonathon.jongsma@gmail.com>
+
+	* docs/tutorial/gtkmm-tut.xml: updated section on prepackaged gtkmm
+	binaries for linux distributions
+
 2006-01-07  Michael J M Thomson  <mjmt@internode.on.net>
 
 	* gtk/gtkmm.h: Include menutoolbutton.h and tearoffmenuitem.h
